test/testData/parser/negative/expressions/fieldOp.err
test/testData/parser/negative/expressions/fieldOp.c:13:3: error: member reference base type 'signed int' is not a structure or union
test/testData/parser/negative/expressions/fieldOp.c:14:3: error: member reference base type 'signed int' is not a structure or union
test/testData/parser/negative/expressions/fieldOp.c:15:3: error: member reference base type 'float' is not a structure or union
test/testData/parser/negative/expressions/fieldOp.c:16:3: error: member reference base type 'float' is not a structure or union
test/testData/parser/negative/expressions/fieldOp.c:17:3: error: member reference base type '*signed int' is not a structure or union
test/testData/parser/negative/expressions/fieldOp.c:18:3: error: member reference base type '*signed int' is not a structure or union
test/testData/parser/negative/expressions/fieldOp.c:19:3: error: member reference base type '*float' is not a structure or union
test/testData/parser/negative/expressions/fieldOp.c:20:3: error: member reference base type '*float' is not a structure or union
test/testData/parser/negative/expressions/fieldOp.c:21:3: error: member reference base type 'signed int[20]' is not a structure or union
test/testData/parser/negative/expressions/fieldOp.c:22:3: error: member reference base type 'signed int[20]' is not a structure or union
test/testData/parser/negative/expressions/fieldOp.c:23:3: warning: expression result unused
test/testData/parser/negative/expressions/fieldOp.c:24:3: error: no member named 'bad' in 'STRUCT S'
test/testData/parser/negative/expressions/fieldOp.c:25:3: error: member reference base type '*STRUCT S' is not a structure or union
test/testData/parser/negative/expressions/fieldOp.c:26:3: error: member reference base type '*STRUCT S' is not a structure or union
test/testData/parser/negative/expressions/fieldOp.c:31:3: error: member reference type 'signed int' is not a pointer
test/testData/parser/negative/expressions/fieldOp.c:32:3: error: member reference type 'signed int' is not a pointer
test/testData/parser/negative/expressions/fieldOp.c:33:3: error: member reference type 'float' is not a pointer
test/testData/parser/negative/expressions/fieldOp.c:34:3: error: member reference type 'float' is not a pointer
test/testData/parser/negative/expressions/fieldOp.c:35:3: error: member reference base type 'signed int' is not a structure or union
test/testData/parser/negative/expressions/fieldOp.c:36:3: error: member reference base type 'signed int' is not a structure or union
test/testData/parser/negative/expressions/fieldOp.c:37:3: error: member reference base type 'float' is not a structure or union
test/testData/parser/negative/expressions/fieldOp.c:38:3: error: member reference base type 'float' is not a structure or union
test/testData/parser/negative/expressions/fieldOp.c:39:3: error: member reference base type 'signed int' is not a structure or union
test/testData/parser/negative/expressions/fieldOp.c:40:3: error: member reference base type 'signed int' is not a structure or union
test/testData/parser/negative/expressions/fieldOp.c:41:3: error: member reference type 'STRUCT S' is not a pointer
test/testData/parser/negative/expressions/fieldOp.c:42:3: error: member reference type 'STRUCT S' is not a pointer
test/testData/parser/negative/expressions/fieldOp.c:43:3: warning: expression result unused
test/testData/parser/negative/expressions/fieldOp.c:44:3: error: no member named 'bad' in 'STRUCT S'
